--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -10,20 +10,19 @@
      
 \sloppy
 
-\title{Instructions for Authors of SBC Conferences\\ Papers and Abstracts}
+\title{Estruturas de dados eficientes\\ para algoritmo genÃ©tico}
 
-\author{Luciana P. Nedel\inst{1}, Rafael H. Bordini\inst{2}, Flávio Rech
-  Wagner\inst{1}, Jomi F. Hübner\inst{3} }
+\author{Raphael R. GonÃ§alves\inst{1}}
 
 
-\address{Instituto de Informática -- Universidade Federal do Rio Grande do Sul
+\address{Instituto de ComputaÃ§Ã£o -- Universidade Federal do Rio Grande do Sul
   (UFRGS)\\
   Caixa Postal 15.064 -- 91.501-970 -- Porto Alegre -- RS -- Brazil
 \nextinstitute
   Department of Computer Science -- University of Durham\\
   Durham, U.K.
 \nextinstitute
-  Departamento de Sistemas e Computação\\
+  Departamento de Sistemas e Computaï¿½ï¿½o\\
   Universidade Regional de Blumenal (FURB) -- Blumenau, SC -- Brazil
   \email{\{nedel,flavio\}@inf.ufrgs.br, R.Bordini@durham.ac.uk,
   jomi@inf.furb.br}
@@ -42,13 +41,13 @@
 \end{abstract}
      
 \begin{resumo} 
-  Este meta-artigo descreve o estilo a ser usado na confecção de artigos e
-  resumos de artigos para publicação nos anais das conferências organizadas
-  pela SBC. É solicitada a escrita de resumo e abstract apenas para os artigos
-  escritos em português. Artigos em inglês deverão apresentar apenas abstract.
+  Este meta-artigo descreve o estilo a ser usado na confecï¿½ï¿½o de artigos e
+  resumos de artigos para publicaï¿½ï¿½o nos anais das conferï¿½ncias organizadas
+  pela SBC. ï¿½ solicitada a escrita de resumo e abstract apenas para os artigos
+  escritos em portuguï¿½s. Artigos em inglï¿½s deverï¿½o apresentar apenas abstract.
   Nos dois casos, o autor deve tomar cuidado para que o resumo (e o abstract)
-  não ultrapassem 10 linhas cada, sendo que ambos devem estar na primeira
-  página do artigo.
+  nï¿½o ultrapassem 10 linhas cada, sendo que ambos devem estar na primeira
+  pï¿½gina do artigo.
 \end{resumo}
 
 
