--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -41,7 +41,7 @@ TODO
 
 TODO
 
-\section{Algoritmo Gen\'{e}tico}
+\section{O Algoritmo Gen\'{e}tico}
 
 TODO
 
@@ -49,11 +49,11 @@ TODO
 
 TODO
 
-\subsection{Gera\c{c}\~{a}o aleat\'{o}ria de elementos n\~{a}o repetitivos}
+\subsection{Rota\~{a}o de vetores}
 
 TODO
 
-\subsection{Rota\~{a}o de vetores}
+\subsection{Gera\c{c}\~{a}o aleat\'{o}ria de elementos n\~{a}o repetitivos}
 
 TODO
 
