--- a/sbc-template.bib
+++ b/sbc-template.bib
@@ -15,6 +15,17 @@
   editor = 	 {Nadia Magnenat-Thalmann and Daniel Thalmann}
 }
 
+@misc{misc:geneticOperations,
+  author = {L. Alsed\`{a}},
+  title = {Genetic Operations},
+}
+
+@misc{misc:introGA,
+  author = {J. Dziedzic},
+  title = {Genetic Operations},
+  year = {2009},
+}
+
 @InCollection{smith:99,
   author = 	 {A. Smith and B. Jones},
   title = 	 {On the Complexity of Computing},
