--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -177,9 +177,22 @@ Caso a pessoa esteja disposta a colaborar com o desenvolvimento de uma bibliotec
 diversos resposit\'{a}rios de c\'{o}digo aberto dispon\'{i}veis na internet. Assim, a pessoa tem a chance de
 colaborar com uma equipe em um projeto que tem um potencial de ajudar muitos desenvolvedores.
 
-\section{Conclus\~{a}o}
+\section{Conclus\~{a}o e trabalhos futuros}
 
-TODO
+Atrav\'{e}s deste texto foi poss\'{i}vel compreender o conceito de algumas estruturas de dados utilizadas
+atualmente, al\'{e}m de conhecer algumas aplica\c{c}\~{o}es para elas. \'{E} de suma import\^{a}ncia escolher a estrutura
+de dados mais adequada para resolver o problema e em quest\~{a}o, para garantir melhor efici\^{e}ncia e talvez at\'{e}
+permita que o c\'{o}digo seja mais limpo e com menos rotinas.
+
+Quando se trata de intelig\^{e}ncia computacional, \'{e} importante que o c\'{o}digo seja eficiente, porque muitas
+vezes se lida com um grande volume de dados. Seguindo algumas t\'{e}cnicas mostradas neste artigo, foi poss\'{i}vel
+reduzir a complexidade de tarefas de linear e quadr\'{a}tica para constante, podendo reduzir consideravelmente o tempo de
+execu\c{c}\~{a}o do algoritmo.
+
+Apesar de este artigo ter sido escrito sob a implement\c{c}\~{a}o de um algoritmo gen\'{e}tico, nele n\~{a}o est\~{a}o
+presentes os testes de desempenho para verificar se houve um ganho real ao optar por estas estruturas de dados.\'{E} esperado
+que haja uma melhora devido ao fato de algumas opera\c{c}\'{o}es serem otimizadas. Futuramente pode ser feito um novo
+trabalho sobre este tema abordando os ganhos em tempo de execu\c{c}\'{a}o ao utilizar estas estruturas.
 
 \section{Figures and Captions}\label{sec:figs}
 
