Added missing citations

--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -61,7 +61,7 @@ foi removido.
 Dentro do contexto de algoritmos gen\'{e}ticos, para realizar um \textit{crossover} pode ser
 necess\'{a}rio realizar diferentes opera\c{c}\~{o}es em um vetor, e uma delas que \'{e} muito
 utilizada \'{e} a rota\c{c}\~{a}o. Um dos operadores de \textit{crossover} que requer uma
-rota\c{c}\~{a}o \'{e} o \textit{Order Crossover} (OX), onde \'{e} selecionado um subconjunto dos genes
+rota\c{c}\~{a}o \'{e} o \textit{Order Crossover} (OX) \cite{misc:geneticOperations}, onde \'{e} selecionado um subconjunto dos genes
 de um indiv\'{i}duo e inserido em outro indiv\'{i}duo, causando uma rota\c{c}\~{a}o dos elementos j\'{a}
 inseridos no segundo indiv\'{i}duo tanto para a direita quanto para a esquerda. Este comportamento \'{e}
 ilustrado na Figura~\ref{fig:orderCrossover}
@@ -69,7 +69,7 @@ ilustrado na Figura~\ref{fig:orderCrossover}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=.8\textwidth]{order_crossover.jpg}
-\caption{O funcionamento do Order Crossover}
+\caption{O funcionamento do Order Crossover (adaptado de \cite{misc:geneticOperations})}
 \label{fig:orderCrossover}
 \end{figure}
 
@@ -193,64 +193,6 @@ Apesar de este artigo ter sido escrito sob a implement\c{c}\~{a}o de um algoritm
 presentes os testes de desempenho para verificar se houve um ganho real ao optar por estas estruturas de dados.\'{E} esperado
 que haja uma melhora devido ao fato de algumas opera\c{c}\'{o}es serem otimizadas. Futuramente pode ser feito um novo
 trabalho sobre este tema abordando os ganhos em tempo de execu\c{c}\'{a}o ao utilizar estas estruturas.
-
-\section{Figures and Captions}\label{sec:figs}
-
-
-Figure and table captions should be centered if less than one line
-(Figure~\ref{fig:exampleFig1}), otherwise justified and indented by 0.8cm on
-both margins, as shown in Figure~\ref{fig:exampleFig2}. The caption font must
-be Helvetica, 10 point, boldface, with 6 points of space before and after each
-caption.
-
-\begin{figure}[ht]
-\centering
-\includegraphics[width=.5\textwidth]{fig1.jpg}
-\caption{A typical figure}
-\label{fig:exampleFig1}
-\end{figure}
-
-\begin{figure}[ht]
-\centering
-\includegraphics[width=.3\textwidth]{fig2.jpg}
-\caption{This figure is an example of a figure caption taking more than one
-  line and justified considering margins mentioned in Section~\ref{sec:figs}.}
-\label{fig:exampleFig2}
-\end{figure}
-
-In tables, try to avoid the use of colored or shaded backgrounds, and avoid
-thick, doubled, or unnecessary framing lines. When reporting empirical data,
-do not use more decimal digits than warranted by their precision and
-reproducibility. Table caption must be placed before the table (see Table 1)
-and the font used must also be Helvetica, 10 point, boldface, with 6 points of
-space before and after each caption.
-
-\begin{table}[ht]
-\centering
-\caption{Variables to be considered on the evaluation of interaction
-  techniques}
-\label{tab:exTable1}
-\includegraphics[width=.7\textwidth]{table.jpg}
-\end{table}
-
-\section{Images}
-
-All images and illustrations should be in black-and-white, or gray tones,
-excepting for the papers that will be electronically available (on CD-ROMs,
-internet, etc.). The image resolution on paper should be about 600 dpi for
-black-and-white images, and 150-300 dpi for grayscale images.  Do not include
-images with excessive resolution, as they may take hours to print, without any
-visible difference in the result. 
-
-\section{References}
-
-Bibliographic references must be unambiguous and uniform.  We recommend giving
-the author names references in brackets, e.g. \cite{knuth:84},
-\cite{boulic:91}, and \cite{smith:99}.
-
-The references must be listed using 12 point font size, with 6 points of space
-before each reference. The first line of each reference should not be
-indented, while the subsequent should be indented by 0.5 cm.
 
 \bibliographystyle{sbc}
 \bibliography{sbc-template}
