Added some introduction text

--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -35,7 +35,9 @@
 
 \section{Introdu\c{c}\~{a}o}
 
-TODO
+Como os genes de um indiv\'{i}duo geralmente s\~{a}o armazenados em forma de vetor, \'{e} comum
+que existam tarefas envolvidas que sejam computacionalmente custosas, como iterar um vetor repetidas
+vezes, com comparar dois vetores e ordena\c{c}\~{a}o de vetores.
 
 \section{Revis\~{a}o da Literatura} \label{sec:firstpage}
 
@@ -45,9 +47,14 @@ TODO
 
 TODO
 
-\section{Desafios durante a implementa\c{c}\~{a}o}
+\section{Problemas a serem otimizados}
 
-TODO
+Neste cap\'{i}tulo ser\~{a}o abordados tr\^{e}s problemas comuns que uma pessoa pode enfrentar ao
+realizar a implementa\c{c}\~{a}o de um algoritmo gen\'{e}tico. Na verdade, eles n\~{a}o s\~{a}o
+exclusivos a este t\'{o}pico, mas possuem aplica\c{c}\~{o}es em muitas outras \'{a}reas
+da computa\c{c}\~{a}o. Em cada item ser\'{a} discutido um problema e por que ele
+pode aumentar demasiadamente o tempo de execu\c{c}\~{a}o do programa e como evitar que
+isso ocorra somente escolhendo uma estrutura de dados mais adequada.
 
 \subsection{Rota\c{c}\~{a}o de vetores}
 
