Added more references

--- a/sbc-template.bib
+++ b/sbc-template.bib
@@ -1,37 +1,28 @@
-@Book{knuth:84,
-  author = 	 {Donald E. Knuth},
-  title = 	 {The {\TeX} Book},
-  publisher = 	 {Addison-Wesley},
-  year = 	 {1984},
-  edition = 	 {15th}
-}
-
-@InCollection{boulic:91,
-  author = 	 {R. Boulic and O. Renault},
-  title = 	 {3D Hierarchies for Animation},
-  booktitle = 	 {New Trends in Animation and Visualization},
-  publisher =    {John Wiley {\&} Sons ltd.},
-  year = 	 {1991},
-  editor = 	 {Nadia Magnenat-Thalmann and Daniel Thalmann}
-}
-
 @misc{misc:geneticOperations,
   author = {L. Alsed\`{a}},
-  title = {Genetic Operations},
+  title  = {Genetic Operations},
 }
 
 @misc{misc:introGA,
   author = {J. Dziedzic},
-  title = {Genetic Operations},
-  year = {2009},
+  title  = {Genetic Operations},
+  year   = {2009},
 }
 
-@InCollection{smith:99,
-  author = 	 {A. Smith and B. Jones},
-  title = 	 {On the Complexity of Computing},
-  booktitle = 	 {Advances in Computer Science},
-  pages = 	 {555--566},
-  publisher =    {Publishing Press},
-  year = 	 {1999},
-  editor = 	 {A. B. Smith-Jones}
+@incollection{berger:03,
+  author    = {J. Berger, M. Barkaoui},
+  title     = {A Hybrid Genetic Algorithm for the Capacitated Vehicle Routing Problem},
+  booktitle = {Genetic and Evolutionary Computation},
+  pages     = {646--656},
+  publisher = {Springer},
+  volume    = {2723},
+  year      = {2003},
+  editor    = {E. Cant\'{u}--Paz}
+}
+
+@book{book:metaheuristics,
+  author         = {X. S. Yang},
+  publisher      = {Wiley},
+  title          = {Engineering Optimization: An Introduction with Metaheuristic Applications},
+  year           = {2011}
 }
