--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -25,11 +25,22 @@
 \maketitle
 
 \begin{abstract}
-    TODO
+    This paper illustrates how the appropriate use of data structures can reduce
+    the execution time of some algorithms in computationally heavy tasks. The
+    discussed problems are related to genetic algorithm, but they can be
+    generalized to include many other situations in different contexts.
+    Furthermore, this paper shows how the data structures are used in practice
+    and how to include them in projects in a realistic way.
 \end{abstract}
      
 \begin{resumo} 
-    A FAZER
+    Este artigo mostra como o uso adequado de estruturas de dados pode reduzir o tempo
+    de execu\c{c}\~{a}o de determinados algoritmos em tarefas computacionalmente exaustivas.
+    Os problemas abordados est\~{a}o no contexto de algoritmo gen\'{e}tico, mas podem ser
+    generalizados para abranger a diversas outras situa\c{c}\~{o}es de diferentes
+    contextos. Este trabalho aborda o uso de estruturas de dados na pr\'{a}tica,
+    mostrando como se deve proceder para incorpor\'{a}-las em projetos de maneira
+    realista.
 \end{resumo}
 
 
